# CanvasStudentRemover

./: README.md  exclude.txt  main.py  pyproject.toml
