[tool.poetry]
name = "canvasstudentremover"
version = "0.1.0"
description = "Script that removes students added to a course on Canvas"
authors = ["Shubham Chawla <shubham_chawla@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
